Model produktů, html

--- a/app/views/static_pages/cart.html.erb
+++ b/app/views/static_pages/cart.html.erb
@@ -23,53 +23,31 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td class="product-thumbnail">
-              <%= image_tag("cloth_1.jpg", class: "img-fluid") %>
-            </td>
-            <td class="product-name">
-              <h2 class="h5 text-black">Tank Top</h2>
-            </td>
-            <td>$49.00</td>
-            <td>
-              <div class="input-group mb-3" style="max-width: 120px;">
-                <div class="input-group-prepend">
-                  <button class="btn btn-outline-primary js-btn-minus" type="button">&minus;</button>
+          <% @products.each do |product| %>
+            <tr>
+              <td class="product-thumbnail">
+                <%= image_tag(product.image, class: "img-fluid") %>
+              </td>
+              <td class="product-name">
+                <h2 class="h5 text-black"><%= product.name %></h2>
+              </td>
+              <td><%= number_to_currency(product.price / 100.0) %></td>
+              <td>
+                <div class="input-group mb-3" style="max-width: 120px;">
+                  <div class="input-group-prepend">
+                    <button class="btn btn-outline-primary js-btn-minus" type="button">&minus;</button>
+                  </div>
+                  <input type="text" class="form-control text-center" value="1" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                  <div class="input-group-append">
+                    <button class="btn btn-outline-primary js-btn-plus" type="button">&plus;</button>
+                  </div>
                 </div>
-                <input type="text" class="form-control text-center" value="1" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
-                <div class="input-group-append">
-                  <button class="btn btn-outline-primary js-btn-plus" type="button">&plus;</button>
-                </div>
-              </div>
 
-            </td>
-            <td>$49.00</td>
-            <td><a href="#" class="btn btn-primary btn-sm">X</a></td>
-          </tr>
-
-          <tr>
-            <td class="product-thumbnail">
-              <%= image_tag("cloth_2.jpg", class: "img-fluid") %>
-            </td>
-            <td class="product-name">
-              <h2 class="h5 text-black">Polo</h2>
-            </td>
-            <td>$49.00</td>
-            <td>
-              <div class="input-group mb-3" style="max-width: 120px;">
-                <div class="input-group-prepend">
-                  <button class="btn btn-outline-primary js-btn-minus" type="button">&minus;</button>
-                </div>
-                <input type="text" class="form-control text-center" value="1" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
-                <div class="input-group-append">
-                  <button class="btn btn-outline-primary js-btn-plus" type="button">&plus;</button>
-                </div>
-              </div>
-
-            </td>
-            <td>$49.00</td>
-            <td><a href="#" class="btn btn-primary btn-sm">X</a></td>
-          </tr>
+              </td>
+              <td><%= number_to_currency(product.price / 100.0) %></td>
+              <td><a href="#" class="btn btn-primary btn-sm">X</a></td>
+            </tr>
+          <% end %>
         </tbody>
       </table>
     </div>
@@ -116,7 +94,7 @@
             <span class="text-black">Celkem</span>
           </div>
           <div class="col-md-6 text-right">
-            <strong class="text-black">$230.00</strong>
+            <strong class="text-black"><%= number_to_currency(@products.sum(&:price) / 100.0) %></strong>
           </div>
         </div>
 
