--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -100,42 +100,20 @@
     <div class="row">
       <div class="col-md-12">
         <div class="nonloop-block-3 owl-carousel">
-          <div class="item">
-            <div class="block-4 text-center">
-              <figure class="block-4-image">
-                <%= image_tag "cloth_1.jpg", class: "img-fluid" %>
-              </figure>
-              <div class="block-4-text p-4">
-                <h3><a href="#">Tank Top</a></h3>
-                <p class="mb-0">Až ti bude horko u sledování burzovních zpráv.</p>
-                <p class="text-primary font-weight-bold">500 Kč</p>
+          <% @products.each do |product| %>
+            <div class="item">
+              <div class="block-4 text-center">
+                <figure class="block-4-image">
+                  <%= image_tag product.image, class: "img-fluid" %>
+                </figure>
+                <div class="block-4-text p-4">
+                  <h3><a href="#"><%= product.name %></a></h3>
+                  <p class="mb-0"><%= product.description %></p>
+                  <p class="text-primary font-weight-bold"><%= number_to_currency(product.price / 100.0) %></p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="item">
-            <div class="block-4 text-center">
-              <figure class="block-4-image">
-                <%= image_tag "shoe_1.jpg", class: "img-fluid" %>
-              </figure>
-              <div class="block-4-text p-4">
-                <h3><a href="#">Konversky z Číny</a></h3>
-                <p class="mb-0">Neboj, my máme rychlejší, než jsou tyhle.</p>
-                <p class="text-primary font-weight-bold">1750 Kč</p>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="block-4 text-center">
-              <figure class="block-4-image">
-                <%= image_tag "cloth_2.jpg", class: "img-fluid" %>
-              </figure>
-              <div class="block-4-text p-4">
-                <h3><a href="#">Polo</a></h3>
-                <p class="mb-0">Ohlodáme tvoje investice až na kost.</p>
-                <p class="text-primary font-weight-bold">750 Kč</p>
-              </div>
-            </div>
-          </div>
+          <% end %>
 
           <!--
           <div class="item">
