--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -110,6 +110,8 @@
                   <h3><a href="#"><%= product.name %></a></h3>
                   <p class="mb-0"><%= product.description %></p>
                   <p class="text-primary font-weight-bold"><%= number_to_currency(product.price / 100.0) %></p>
+                  <%= link_to "Koupit", cart_add_path(product_id: product.id), method: :post, remote: true, class: "btn btn-primary btn-sm" %>
+                  <%= link_to "Hotovo", cart_show_path, class: "btn btn-secondary btn-sm" %>
                 </div>
               </div>
             </div>
