--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
                   <li>
                     <%= link_to(cart_show_path, class: "site-cart") do %>
                       <span class="icon icon-shopping_cart"></span>
-                      <span class="count"><%= current_order.order_items.count %></span>
+                      <span class="count"><%= current_order.total_count %></span>
                     <% end %>
                   </li>
                   <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu"></span></a></li>
